Add feature to generate filename by hash of content. Add coverage reports and codecov integration.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,7 @@ language: node_js
 node_js:
   - "node"
 cache: yarn
+install:
+  - yarn global add codecov
+script:
+  - yarn run report-coverage && codecov
