--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,9 @@
 {
   "presets": ["es2015"],
-  "plugins": ["transform-object-rest-spread"],
+  "plugins": [
+    "transform-object-rest-spread",
+    "syntax-async-functions"
+  ],
   "env": {
     "test": {
       "plugins": ["istanbul"]
