--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "./node_modules/webpack/bin/webpack.js",
     "watch": "./node_modules/webpack/bin/webpack.js --watch",
     "test": "./node_modules/mocha/bin/mocha --require babel-register",
-    "coverage": "cross-env NODE_ENV=test nyc yarn test"
+    "coverage": "cross-env NODE_ENV=test nyc yarn test",
+    "report-coverage": "cross-env NODE_ENV=test nyc report --reporter=lcov > coverage.lcov"
   },
   "keywords": [
     "receipt",
@@ -22,6 +23,7 @@
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-plugin-istanbul": "^4.1.1",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-register": "^6.24.0",
@@ -38,9 +40,11 @@
   },
   "dependencies": {
     "ajv": "^5.0.4-beta",
+    "crypto-js": "^3.1.9-1",
     "currency-formatter": "^1.2.1",
     "handlebars": "^4.0.6",
     "he": "^1.1.1",
+    "mkdirp": "^0.5.1",
     "phantom": "^4.0.1"
   }
 }
