--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "./node_modules/webpack/bin/webpack.js --watch",
     "test": "./node_modules/mocha/bin/mocha --require babel-register",
     "coverage": "cross-env NODE_ENV=test nyc yarn test",
-    "report-coverage": "cross-env NODE_ENV=test nyc report --reporter=lcov > coverage.lcov"
+    "report-coverage": "cross-env NODE_ENV=test nyc report --reporter=lcov && cp ./coverage/lcov.info coverage.lcov"
   },
   "keywords": [
     "receipt",
