--- a/package.json
+++ b/package.json
@@ -26,31 +26,31 @@
   "author": "Daniel Li <dan@danyll.com> (http://danyll.com/)",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-istanbul": "^4.1.1",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-register": "^6.24.0",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
+    "chai": "^4.1.1",
+    "chai-as-promised": "^7.1.1",
     "chai-fs": "^1.0.0",
-    "cross-env": "^4.0.0",
+    "cross-env": "^5.0.5",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
-    "nyc": "^10.2.0",
+    "nyc": "^11.1.0",
     "randomstring": "^1.1.5",
     "rimraf": "^2.6.1",
-    "webpack": "beta"
+    "webpack": "3.5.5"
   },
   "dependencies": {
-    "ajv": "^5.0.4-beta",
+    "ajv": "^5.2.2",
     "crypto-js": "^3.1.9-1",
     "currency-formatter": "^1.2.1",
-    "handlebars": "^4.0.6",
+    "handlebars": "^4.0.10",
     "he": "^1.1.1",
     "mkdirp": "^0.5.1",
-    "phantom": "^4.0.1"
+    "phantom": "^4.0.5"
   }
 }
