--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "revoice",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Generate HTML / PDF receipts and invoices",
   "main": "dist/lib.js",
   "homepage": "https://github.com/brewhk/revoice",
@@ -16,7 +16,7 @@
     "test": "./node_modules/mocha/bin/mocha --require babel-register",
     "coverage": "cross-env NODE_ENV=test nyc yarn test",
     "report-coverage": "cross-env NODE_ENV=test nyc report --reporter=lcov && cp ./coverage/lcov.info coverage.lcov",
-    "prepublishOnly": "yarn licenses generate-disclaimer > DISCLAIMER"
+    "prepublishOnly": "yarn licenses generate-disclaimer > DISCLAIMER && yarn run build"
   },
   "keywords": [
     "receipt",
@@ -43,7 +43,7 @@
     "nyc": "^11.1.0",
     "randomstring": "^1.1.5",
     "rimraf": "^2.6.1",
-    "webpack": "3.5.5"
+    "webpack": "^3.5.5"
   },
   "dependencies": {
     "ajv": "^5.2.2",
