--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
   "author": "Daniel Li <dan@danyll.com> (http://danyll.com/)",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-istanbul": "^4.1.1",
@@ -43,16 +42,17 @@
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "nyc": "^11.1.0",
-    "randomstring": "^1.1.5",
-    "rimraf": "^2.6.1"
+    "randomstring": "^1.1.5"
   },
   "dependencies": {
     "ajv": "^5.2.2",
+    "babel-cli": "^6.26.0",
     "crypto-js": "^3.1.9-1",
     "currency-formatter": "^1.2.1",
     "handlebars": "^4.0.10",
     "he": "^1.1.1",
     "mkdirp": "^0.5.1",
-    "phantom": "^4.0.5"
+    "phantom": "^4.0.5",
+    "rimraf": "^2.6.1"
   }
 }
