--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "revoice",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "description": "Generate HTML / PDF receipts and invoices",
   "main": "dist/index.js",
   "homepage": "https://github.com/brewhk/revoice",
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "start": "yarn test -- --watch & yarn watch",
-    "build": "./node_modules/.bin/rimraf './dist' && ./node_modules/.bin/babel src --out-dir dist",
+    "build": "./node_modules/.bin/rimraf './dist' && ./node_modules/.bin/babel src --out-dir dist && cp -R ./src/schema/ ./dist",
     "watch": "yarn run build -- --watch",
     "test": "./node_modules/mocha/bin/mocha --require babel-register",
     "coverage": "cross-env NODE_ENV=test nyc yarn test",
